--- a/index.html
+++ b/index.html
@@ -30,23 +30,13 @@
       <div class="col-xs-12  col-md-9">
         <div class="article">
           <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>We've created an interactive plot to help you explore and better undestand the relationship(s) between
-            health risks (such as obesity and smoking)
-            and access to healthcare in each of the fifty states of the country. We've also included other factors which
-            may at first glance seem unrelated to
+          <p>We've created an interactive plot to help you explore and better understand the relationship(s) between
+            health risks (such as obesity and smoking) and the factors that may affect it. Factors such as access to
+            healthcare and percentage of the population that smokes. We've broken down the data for each of the fifty
+            states of the country We've also included other factors which may at first glance seem unrelated to
             healthcare outcomes. Factors such as income, poverty levels within the state.</p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-            tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-            Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-            tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-            Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>Happy viewing</p>
         </div>
       </div>
     </div>
